[package]
name = "sitegen"
description = "Static site generator"
version = "0.0.1"
authors = ["Shamil Yakupov <s.yakupov@noviga.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "sitegen"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
error-chain = "0.12"
fs_extra = "1.1"
handlebars = "2.0"
sass-rs = "0.2"
serde_json = "1.0"
termcolor = "1.1"